.omo/evidence/controller-webhook-split-deployment/split/live-split-20260728003000/admission-validating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T16:06:01Z"
  generation: 1
  name: echo-operator.echo-smoke-split-live-split-20260728003000.echo.example.com
  resourceVersion: "2238043"
  uid: 7e5d3ed0-6bd9-4404-88d2-179ced46cba4
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVSklsZG1LYlVPTTNDMlNjZGxaMXFycC85anBRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dERVdNQlFHQTFVRUF3d05aV05vYnkxemJXOXJaUzFqWVRBZUZ3MHlOakEzTWpjeE5qQTFOVGhhRncweQpOakEzTWpneE5qQTFOVGhhTUJneEZqQVVCZ05WQkFNTURXVmphRzh0YzIxdmEyVXRZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNTRGFkcDdhVnNsTHNyNEhRazFWWU1qN3p3K1JTUXdJai8KYzlpaG90WEtqcExkcXJNZCtuRENTQXZBSWNXUmVtR2xaWktCT3cyT0FqbHRUL3JSZW84UjNEV2JiTTA4ZjNmYgplS21lUDl6RVNnQm [...]
    service:
      name: echo-smoke-split-live-split-20260728003000-echo-operator
      namespace: echo-smoke-split-live-split-20260728003000
      path: /validate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-split-live-split-20260728003000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
